# mnemos

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENT_PLATFORM_TEST_EXECUTION.md  AGENT_PLATFORM_TEST_MCP_AND_API.md  AGENT_PLATFORM_TEST_PLAN.md  ANTI_MEMORY_POISONING.md  API_DOCUMENTATION.md  API_INFERENCE_STATUS.md  API_INFERENCE_TEST_PLAN.md  CHANGELOG.md  COMPREHENSIVE_OVERHEAD_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENT_IMPORT_GUIDE.md  Dockerfile  EVOLUTION.md  EXECUTION_WITH_SYSTEM_LOCATIONS.md  INFERENCE_ALIGNMENT.md  INTEGRATION_IMPLEMENTATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  INVESTORCLAW_API_INFERENCE_INTEGRATION.md  LICENSE  LICENSE-PROPRIETARY.md  MANIFEST.in  MNEMOS_AGENT_BENCHMARK_HARNESS.py  MNEMOS_API_INFERENCE_EXAMPLES.md  MNEMOS_DIRECT_BENCHMARK.py  MNEMOS_HERMES_BENCHMARK.py  MNEMOS_v24_IMPLEMENTATION_NOTES.md  Makefile  NFS_FIXES_COMPLETE_2026-03-13.txt  OPTIMIZATION_REPORT_2026-03-13.txt  PROTEUS_INFERENCE_ALIGNMENT_COMPLETE.md  PUBLIC_RELEASE_CHECKLIST.md  QUICK_REFERENCE_CARD.md  (+65 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  release-docker.yml
api/: __init__.py  auth.py  federation.py  lifecycle.py  mcp_tools.py  models.py  oauth.py  observability.py  rate_limit.py  webhook_dispatcher.py
api/handlers/: __init__.py  admin.py  consultations.py  dag.py  document_import.py  entities.py  federation.py  graeae_routes.py  health.py  ingest.py  journal.py  kg.py  memories.py  model_registry_routes.py  morpheus.py  narrate.py  oauth.py  openai_compat.py  portability.py  providers.py  sessions.py  state.py  versions.py  webhooks.py
archive/: README.md
archive/background_workers/: README.md  background_embedding_job.py  git_distillation_job.py  git_to_mnemos.py
archive/caches/: README.md  compression_cache.py  dual_layer_cache.py  embedding_cache.py
archive/graeae_improvements/: README.md  consultation_analytics.py  dynamic_router.py  fitness_calculator.py  graeae_response_cache.py  graeae_response_ranker.py
archive/metrics/: README.md  metrics.py
archive/tests/: README.md  conftest.py  test_graeae_features.py  test_hooks.py
benchmark_results/: benchmark_direct_20260419_212025.json  benchmark_hermes_20260419_230912.json  benchmark_openclaw_20260419_211106.json  benchmark_openclaw_20260419_212709.json
benchmarks/: README.md  compression_corpus_v3_3.jsonl
compression/: __init__.py  _sentence_extract_impl.py  _token_filter_impl.py  aletheia.py  anamnesis.py  apollo.py  artemis.py  base.py  contest.py  contest_store.py  distillation_engine.py  gpu_guard.py  judge.py  lethe.py  manager.py  quality_analyzer.py  token_filter.py  worker_contest.py
compression/apollo_schemas/: __init__.py  base.py  code.py  commit.py  decision.py  event.py  person.py  portfolio.py
core/: mnemos_features.py
db/: migrations.sql  migrations_model_registry.sql  migrations_v1_multiuser.sql  migrations_v2_sessions.sql  migrations_v2_versioning.sql  migrations_v3_1_2_audit_log_columns.sql  migrations_v3_1_2_kg_tenancy.sql  migrations_v3_1_compression.sql  migrations_v3_1_versioning_fix.sql  migrations_v3_2_2_version_snapshot_new_values.sql  migrations_v3_2_entities_namespace.sql  migrations_v3_2_user_namespace.sql  migrations_v3_3_morpheus.sql  migrations_v3_3_morpheus_namespace.sql  migrations_v3_3_recall_tracking.sql  migrations_v3_dag.sql  migrations_v3_federation.sql  migrations_v3_graeae_unified.sql  migrations_v3_oauth.sql  migrations_v3_ownership.sql  migrations_v3_webhooks.sql
docs/: ALL_16_FEATURES.md  DREAM_STATE_DESIGN.md  EFFORT_ESTIMATE.md  GRAEAE_FEATURES.md  IMPLEMENTATION_REPORT.md  KNOSSOS.md  MEMORY_EXPORT_FORMAT.md  SPECIFICATION.md  SYSTEM_REQUIREMENTS.md  mpf_v0.1.json
docs/archive/: MNEMOS_REMEDIATION_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROJECT_COMPLETE.md
docs/benchmarks/: compression-2026-04-23.md
docs/connectors/: README.md  chatgpt-pro-developer-mode.md
graeae/: __init__.py  _cache.py  _circuit_breaker.py  _concurrency.py  _quality.py  _rate_limiter.py  api_keys.py  elo_sync.py  engine.py  model_registry.py  provider_sync.py
graeae/core/: circuit_breaker.py  quality_scorer.py  queue.py  rate_limiter.py  semantic_cache.py
harness/: mnemos_harness_v200.txt
installer/: __init__.py  __main__.py  agent.py  db.py  detect.py  service.py  venv_setup.py  wizard.py
integrations/: README.md  __init__.py
integrations/claude-code/: README.md  hooks.config.example  (+3 more)
morpheus/: __init__.py  runner.py
scripts/: benchmark_compression_corpus.py  live_apollo_judge_smoke.py  mnemos_tunnel_setup.py  refresh_elo_weights.py  refresh_openclaw_models.py  sync_provider_models.py  update_graeae_config.py  update_model_registry.py
systemd/: graeae-model-sync.service  graeae-model-sync.timer
tests/: __init__.py  conftest.py  test_admin_compression_enqueue.py  test_admin_federation_role.py  test_admin_user_namespace.py  test_aletheia_engine.py  test_anamnesis_engine.py  test_apollo_adversarial.py  test_apollo_code.py  test_apollo_commit.py  test_apollo_decision.py  test_apollo_engine.py  test_apollo_event.py  test_apollo_fallback.py  test_apollo_person.py  test_apollo_portfolio.py  test_artemis_engine.py  test_audit_high_fixes.py  test_compression_base.py  test_compression_hot_paths.py  test_compression_manifests_endpoint.py  test_contest.py  test_contest_judge.py  test_contest_store.py  test_custom_query.py  test_dag_tenancy.py  test_distillation_engine_async.py  test_document_import.py  test_e2e.py  test_federation.py  test_gateway_provider_routing.py  test_gpu_guard.py  test_graeae_features.py  test_hooks.py  test_inference_alignment.py  test_installer_api_keys_schema.py  test_integration.py  test_judge.py  test_judge_cross_encoder.py  test_kg_tenancy.py  (+26 more)
tools/: README.md  docling_import.py  export_memories_for_docling.py  knossos_mcp.py  memory_export.py  memory_import.py  migrate_legacy_data.py  mpf_validate.py
(+60 files in other folders)
