[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos"
version = "2.3.0"
description = "MNEMOS memory infrastructure with GRAEAE reasoning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "MNEMOS Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "limits>=3.6.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
  "numpy>=1.26.0",
  "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/mnemos-dev/mnemos"
Repository = "https://github.com/mnemos-dev/mnemos"
Documentation = "https://github.com/mnemos-dev/mnemos/blob/master/README.md"

[project.optional-dependencies]
phi = ["openvino-genai>=2024.4.0", "fastembed>=0.3.0"]
full = ["sentence-transformers>=2.7.0", "spacy>=3.7.0", "networkx>=3.3"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
py-modules = [
  "api_server",
  "config",
  "distillation_worker",
  "external_inference_provider",
  "mcp_server",
  "phi_server",
]

[tool.setuptools.packages.find]
include = ["api*", "graeae*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_live_e2e.py"
