[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-os"
version = "3.0.0"
description = "MNEMOS-OS v3: Unified memory operating system with GRAEAE reasoning, DAG versioning, compression, and cost-aware routing"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "MNEMOS Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "limits>=3.6.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
  "numpy>=1.26.0",
  "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/mnemos-dev/mnemos"
Repository = "https://github.com/mnemos-dev/mnemos"
Documentation = "https://github.com/mnemos-dev/mnemos/blob/master/README.md"

[project.optional-dependencies]
docling = ["docling>=2.5.0", "docling-core>=2.0.0", "pillow>=10.0.0"]
full = ["sentence-transformers>=2.7.0", "spacy>=3.7.0", "networkx>=3.3"]
# Note: GPU inference (OpenVINO) skipped on PROTEUS — no GPU hardware. Use CERBERUS (RTX 4500 Ada) for GPU workloads.
phi = ["openvino-genai>=2024.4.0", "fastembed>=0.3.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
py-modules = [
  "api_server",
  "config",
  "distillation_worker",
  "mcp_server",
  "inference_backend",
]

[tool.setuptools.packages.find]
include = ["api*", "compression*", "graeae*", "db*"]

[tool.uv]
# uv: fast Python package installer for Docker builds
# Install with: curl -LsSf https://astral.sh/uv/install.sh | sh
python-version = "3.11"

[[tool.uv.index]]
# Optional: use official PyPI (default)
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_live_e2e.py"
