[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-os"
version = "3.2.0"
description = "MNEMOS-OS v3: Unified memory operating system with GRAEAE reasoning, DAG versioning, compression, and cost-aware routing"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "MNEMOS Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "limits>=3.6.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
  "numpy>=1.26.0",
  "psutil>=5.9.0",
  "authlib>=1.3.0",
  "itsdangerous>=2.2.0",
  "prometheus_client>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/perlowja/mnemos"
Repository = "https://github.com/perlowja/mnemos"
Documentation = "https://github.com/perlowja/mnemos/blob/master/README.md"

[project.optional-dependencies]
docling = ["docling>=2.5.0", "docling-core>=2.0.0", "pillow>=10.0.0"]
# OpenTelemetry tracing. Without this extra, `install_tracing()` is a
# no-op and the tracing middleware passes through unchanged. Install
# via `pip install mnemos-os[tracing]` to ship spans via OTLP/HTTP
# to your collector (Tempo, Honeycomb, Jaeger, etc.).
tracing = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
# Structured JSON log rendering via structlog. Enables
# MNEMOS_STRUCTURED_LOGS=true at runtime to opt in. Without this
# extra, install_structured_logging() is a no-op.
structlog = [
  "structlog>=25.0.0",
]
full = ["sentence-transformers>=2.7.0", "spacy>=3.7.0", "networkx>=3.3"]
# Note: the `phi` extras are optional GPU-dependent OpenVINO/FastEmbed support. Most installs don't need it.
phi = ["openvino-genai>=2024.4.0", "fastembed>=0.3.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
# Entry points that land in PATH after `pip install mnemos-os`. The installer
# can then be invoked as `mnemos-install` without needing install.py on the
# filesystem.
mnemos-install = "installer.__main__:main"

[tool.setuptools]
py-modules = [
  "api_server",
  "config",
  "distillation_worker",
  "mcp_server",
  "inference_backend",
]
# Ship every file listed in MANIFEST.in (SQL migrations, config example,
# systemd unit) into the sdist and, via package-data below, into the wheel.
include-package-data = true

[tool.setuptools.packages.find]
# Include every Python subpackage we ship, not just the core API. Previously
# `installer`, `modules*`, and `tools` were omitted, so `pip install mnemos-os`
# couldn't run the install CLI or the docling-import helpers.
include = [
  "api*",
  "compression*",
  "graeae*",
  "db*",
  "installer*",
  "modules*",
  "tools*",
]

[tool.setuptools.package-data]
# SQL migrations ride inside the `db` package so `pip install mnemos-os`
# gives you the full v3 schema bootstrap, not just the Python code. Access
# them via `importlib.resources.files('db')` at runtime.
db = ["*.sql"]

# uv: fast Python package installer for Docker builds
# Install with: curl -LsSf https://astral.sh/uv/install.sh | sh
# Note: uv does not support python-version in [tool.uv] (use pyproject.toml requires-python instead)
# For Docker: use `uv pip install --system -r requirements.txt` (--system is required when no venv exists)

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "archive",
  "venv",
  ".venv",
  "dist",
  "build",
  "tools/export_memories_for_docling.py",  # generated helper
]

[tool.ruff.lint]
# Default select is E+F+W; we add a tight ignore list for patterns that are
# intentional in this codebase.
ignore = [
  "E402",  # module-level import not at top — legit with sys.path.insert + conditional imports
  "E501",  # line-too-long — we set line-length above; trust that
  "F541",  # f-string without placeholders — cosmetic noise
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files legitimately re-export symbols
"**/__init__.py" = ["F401"]
# Installer uses string forward references to lazily-imported Config
"installer/__main__.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_live_e2e.py"
markers = [
  "integration: integration tests requiring MNEMOS_TEST_DB (postgres://...)",
]
